# soup-sdk-rs

./: Cargo.toml
src/: client.rs  constants.rs  error.rs  lib.rs  main.rs  models.rs  vod_chat_parser.rs
src/chat/: commands.rs  connection.rs  constants.rs  events.rs  formatter.rs  message.rs  mod.rs  options.rs  parser.rs  types.rs  util.rs  verification.rs
src/chat/parser/: balloon.rs  chat.rs  constants.rs  emoticon.rs  exit.rs  freeze.rs  gift.rs  join.rs  kick.rs  mission.rs  mod.rs  mute.rs  notification.rs  raw.rs  slow.rs  sticker.rs  subscribe.rs  types.rs  user.rs  util.rs
