[package]
name = "soop-chat-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio-tungstenite = { version = "0.23", features = ["url"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4.4", features = ["serde"]}
url = { version = "2", features = ["serde"] }
futures-util = "0.3"
anyhow = "1.0"